# feynman-engine

./: .cursorignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  Makefile  PHASE_0_CHECKLIST.md  QUICKSTART.md  README.md
.agent/: ARCHITECTURE.md  CODING_GUIDELINES.md  README.md  SAFETY_RULES.md
.agents/: README.md
.agents/rules/: risk-touching.md
.agents/skills/evolve/: SKILL.md
.agents/skills/pr-evidence-sync/: SKILL.md
.claude/: README.md  settings.json
.claude/rules/: risk-touching.md
.claude/skills/docs-sync/: SKILL.md
.claude/skills/evolve/: SKILL.md
.claude/skills/hostile-review/: SKILL.md
.claude/skills/pr-evidence-sync/: SKILL.md
.claude/skills/worktree-guard/: SKILL.md
.github/workflows/: build.yml  test.yml
bins/feynman-engine/: Cargo.toml
bins/feynman-engine/src/: bybit_testnet_smoke.rs  main.rs
config/: default.toml
crates/agent-bus/: Cargo.toml
crates/agent-bus/src/: lib.rs
crates/agent-risk/: Cargo.toml
crates/agent-risk/src/: lib.rs
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/bridge/: Cargo.toml
crates/bridge/src/: lib.rs
crates/bus/: Cargo.toml
crates/bus/src/: lib.rs  redis.rs
crates/dashboard/: Cargo.toml
crates/dashboard/src/: lib.rs
crates/engine-core/: Cargo.toml
crates/engine-core/src/: journal.rs  lib.rs  sequencer.rs  sequencer_tests.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: bybit.rs  lib.rs
crates/observability/: Cargo.toml
crates/observability/src/: lib.rs
crates/pipeline/: Cargo.toml
crates/pipeline/src/: lib.rs
crates/risk/: Cargo.toml
crates/risk/src/: circuit_breaker.rs  lib.rs
crates/types/: Cargo.toml
crates/types/src/: clock.rs  event.rs  fees.rs  health.rs  ids.rs  lib.rs  market_data.rs  pipeline.rs  pnl.rs  portfolio.rs  reconciliation.rs  risk.rs  signal.rs  venue.rs
docker/: docker-compose.yml  engine.Dockerfile
docs/: CODING_GUIDELINES.md  CONTRACTS.md  CORE_ENGINE_DESIGN.md  DATA_MODEL.md  DEVELOPMENT.md  DEV_WORKFLOW.md  MIGRATION_PLAN.md  ROADMAP.md  SAFETY_RULES.md  STRATEGY_ENGINE_BOUNDARY.md  SYSTEM_ARCHITECTURE.md  TESTING.md
proto/feynman/engine/v1/: service.proto
scripts/: bybit-testnet-smoke.sh  smoke-test.sh
tests/integration/: bus.rs  risk.rs
