[package]
name = "feynman-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "feynman-engine"
path = "src/main.rs"

[dependencies]
types.workspace = true
risk.workspace = true
bus.workspace = true
gateway.workspace = true
engine-core.workspace = true
observability.workspace = true
api.workspace = true

tokio.workspace = true
anyhow.workspace = true
config.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
