[package]
name = "bus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
types.workspace = true
chrono.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tokio.workspace = true
fred.workspace = true
tracing.workspace = true

[dev-dependencies]
anyhow.workspace = true
proptest.workspace = true

[[test]]
name = "bus"
path = "../../tests/integration/bus.rs"
