[package]
name = "gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
types.workspace = true
engine-core.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
futures-util.workspace = true
hmac.workspace = true
hex.workspace = true
reqwest.workspace = true
secrecy.workspace = true
sha2.workspace = true
tokio-tungstenite.workspace = true

[dev-dependencies]
proptest.workspace = true
