[package]
name = "risk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
types.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tokio.workspace = true

[dev-dependencies]
anyhow.workspace = true
proptest.workspace = true

[[test]]
name = "risk"
path = "../../tests/integration/risk.rs"
