[package]
name = "types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
thiserror.workspace = true
anyhow.workspace = true

[dev-dependencies]
proptest.workspace = true
